TypedLama/regression/compile_error/test011.1.lama
-- check static type conformity of functions
-- less arguments than declared in type:
less_args :: (Int, A, B) -> Str;
fun less_args(i, a) {
  "kek"
}